syntax = "proto3";

package event.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";
import "google/protobuf/timestamp.proto";


option go_package = "go.tekoapis.com/uetvoting/pb/event/v1;event";

// EventService ...
service EventService {
    // UpsertEvent ...
    rpc UpsertEvent (UpsertEventRequest) returns (UpsertEventResponse) {
        option (google.api.http) = {
            post: "/v1/events"
            body: "*"
        };
    }

    // GetEventByID ...
    rpc GetEventByID (GetEventByIDRequest) returns (GetEventByIDResponse) {
        option (google.api.http) = {
            get: "/v1/events/{id}"
        };
    }
}

// UpsertEventRequest ...
message UpsertEventRequest {
    int32 id = 1;
    string name = 2 [(validate.rules).string.min_len = 1];
    string participants = 3 [(validate.rules).string.min_len = 4];
    // Section ...
    message Section {
        string name = 1 [(validate.rules).string.min_len = 1];
        string description = 2 [(validate.rules).string.min_len = 1];
        int32 position = 3;
        repeated Question questions = 4;
    }
    // Question ...
    message Question {
        string content = 1 [(validate.rules).string.min_len = 1];
        int32 position = 2;
        string type = 3;
        bool is_required = 4;
        int32 limited_choice = 5;
        repeated Option options = 6;
    }
    // Option ...
    message Option {
        string content = 1 [(validate.rules).string.min_len = 1];
    }
    repeated Section sections = 4;
}

// UpsertEventResponse ...
message UpsertEventResponse {
    int32 id = 1;
}

// GetEventByIDRequest ...
message GetEventByIDRequest {
    int32 id = 1;
}

// GetEventByIDResponse ...
message GetEventByIDResponse {
    int32 id = 1;
    string name = 2;
    string participants = 3;
    // Section ...
    message Section {
        int32 id = 1;
        string name = 2;
        string description = 3;
        int32 position = 4;
        repeated Question questions = 5;
    }
    // Question ...
    message Question {
        int32 id = 1;
        string content = 2;
        int32 position = 3;
        string type = 4;
        bool is_required = 5;
        int32 limited_choice = 6;
        repeated Option options = 7;
    }
    // Option ...
    message Option {
        int32 id = 1;
        string content = 2 [(validate.rules).string.min_len = 1];
    }
    repeated Section sections = 4;
    google.protobuf.Timestamp updated_at = 5;
    bool is_opened = 6;
    bool is_approved = 7;
}
